gap fixed on feature image

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -400,7 +400,9 @@ font-size: 15px;
     align-items: center;
     max-width: 100vw;
     margin-bottom: 1em;
+    gap: 10%;
   }
+
   html {
     width: 100vw;
   }
@@ -446,6 +448,7 @@ font-size: 15px;
   .welcome-banner-img {
     width: 80vw;
     height: auto;
+    padding-bottom: 2em;
   }
 
   .action {
